# roscode_capstone

devel/: .catkin  _setup_util.py  setup.sh
devel/include/ired_msgs/: IMU.h  Mode.h  Motor.h  PID.h
devel/lib/ired_bringup/: ired_odom_node
devel/lib/ired_movetogoal/: movetogoal.py
devel/lib/pkgconfig/: ired_bringup.pc  ired_movetogoal.pc  ired_msgs.pc  ired_navigation.pc  ired_teleop.pc  robot_interaction.pc  rosserial_arduino.pc  rosserial_client.pc  rosserial_msgs.pc  rosserial_python.pc  rplidar_ros.pc  waypoint_navigation.pc
devel/lib/python3/dist-packages/rosserial_arduino/: __init__.py
devel/lib/python3/dist-packages/rosserial_client/: __init__.py
devel/lib/python3/dist-packages/rosserial_python/: __init__.py
devel/lib/rosserial_arduino/: serial_node.py
devel/lib/rosserial_client/: make_libraries
devel/lib/rosserial_python/: serial_node.py
devel/lib/rplidar_ros/: rplidarNode  rplidarNodeClient
devel/share/gennodejs/ros/ired_msgs/msg/: IMU.js  (+4 more)
devel/share/ired_bringup/cmake/: ired_bringupConfig.cmake
devel/share/ired_movetogoal/cmake/: ired_movetogoalConfig.cmake
devel/share/ired_msgs/cmake/: ired_msgs-msg-extras.cmake  ired_msgs-msg-paths.cmake  ired_msgsConfig.cmake
devel/share/ired_navigation/cmake/: ired_navigationConfig.cmake
devel/share/ired_teleop/cmake/: ired_teleopConfig.cmake
devel/share/robot_interaction/cmake/: robot_interactionConfig.cmake
devel/share/roseus/ros/ired_msgs/: manifest.l
devel/share/roseus/ros/rosserial_arduino/: manifest.l
devel/share/rosserial_arduino/cmake/: rosserial_arduino-extras.cmake  rosserial_arduino-msg-extras.cmake  rosserial_arduino-msg-paths.cmake  rosserial_arduinoConfig.cmake
devel/share/rosserial_client/cmake/: rosserial_clientConfig.cmake
devel/share/rosserial_msgs/cmake/: rosserial_msgs-msg-extras.cmake  rosserial_msgs-msg-paths.cmake  rosserial_msgsConfig.cmake
devel/share/rosserial_python/cmake/: rosserial_pythonConfig.cmake
devel/share/rplidar_ros/cmake/: rplidar_rosConfig.cmake
devel/share/waypoint_navigation/cmake/: waypoint_navigationConfig.cmake
src/ired_bringup/: CMakeLists.txt  README.md
src/ired_bringup/include/ired_bringup/: ired_odom.h
src/ired_bringup/launch/: bringup.launch
src/ired_bringup/src/: ired_odom.cpp
src/ired_bringup/urdf/: robot.urdf.xacro
src/ired_movetogoal/launch/: movetogoal.launch
src/ired_movetogoal/scripts/: .movetogoal.py.swp  movetogoal_3Stations.py  movetogoal_3_points.py  movetogoal_baseCODE.py  movetogoal_clear_costmaps.py  movetogoal_withRotationCheck.py
src/ired_msgs/: CMakeLists.txt
src/ired_msgs/msg/: Mode.msg  Motor.msg  PID.msg
src/ired_navigation/: CMakeLists.txt
src/ired_navigation/launch/: move_base.launch  navigation.launch  savemap.launch  slam.launch
src/ired_navigation/param/: costmap_common_params.yaml  global_costmap_params.yaml
src/ired_teleop/: CMakeLists.txt
src/ired_teleop/launch/: teleop.launch
src/robot_interaction/: CMakeLists.txt
src/robot_interaction/scripts/: face_recognizer.py  human_detector.py  main.py  svm_classifier_windows.pkl  wakeword_detector.py
src/rplidar_ros/launch/: rplidar_ros.launch  view_rplidar.launch
src/waypoint_navigation/: CMakeLists.txt
src/waypoint_navigation/launch/: waypoint_navigation.launch
src/waypoint_navigation/scripts/: waypoint_navigation.py
(+18 files in other folders)
